--- a/index.html
+++ b/index.html
@@ -1,1 +1,334 @@
+<!doctype html>
+<html lang="en-CA">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="format-detection" content="telephone=no">
 
+  <title>PrefabHomesCanada (2026) | Practical Prefab & Modular Home Guides for Canada</title>
+  <meta name="description" content="PrefabHomesCanada publishes practical, Canada-focused guides on expandable and modular prefab homes: what to verify, what’s missing, and realistic installed costs." />
+  <link rel="canonical" href="https://prefabhomescanada.github.io/">
+
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet=-1,max-video-preview=-1">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="color-scheme" content="dark light">
+  <meta name="theme-color" content="#0b1020">
+  <meta name="author" content="PrefabHomesCanada Editorial">
+
+  <!-- Favicons (root) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Shared CSS -->
+  <link rel="stylesheet" href="/assets/css/styles.css">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="PrefabHomesCanada">
+  <meta property="og:title" content="PrefabHomesCanada (2026) | Practical Prefab & Modular Home Guides for Canada">
+  <meta property="og:description" content="Canada-focused prefab guidance: what to verify, what’s missing, and realistic installed costs. No hype." />
+  <meta property="og:url" content="https://prefabhomescanada.github.io/">
+  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/prefabhomescanada-home-1200x630.webp">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="PrefabHomesCanada (2026) | Practical Prefab & Modular Home Guides for Canada">
+  <meta name="twitter:description" content="Canada-focused prefab guidance: what to verify, what’s missing, and realistic installed costs. No hype." />
+  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/prefabhomescanada-home-1200x630.webp">
+
+  <!-- JSON-LD: Organization + WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"PrefabHomesCanada",
+    "url":"https://prefabhomescanada.github.io/",
+    "logo":"https://prefabhomescanada.github.io/android-chrome-512x512.png"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "@id":"https://prefabhomescanada.github.io/#website",
+    "name":"PrefabHomesCanada",
+    "url":"https://prefabhomescanada.github.io/"
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" id="top">
+    <div class="wrap header-inner">
+      <a class="brand" href="/" aria-label="PrefabHomesCanada Home">
+        <img
+          class="brand-logo"
+          src="/assets/images/branding/prefab-homes-canada-logo-horizontal.png"
+          alt="PrefabHomesCanada"
+          width="1000"
+          height="250"
+          loading="eager"
+          decoding="async">
+      </a>
+
+      <button id="menuBtn" class="btn btn-ghost" type="button"
+              aria-label="Open menu" aria-expanded="false" aria-controls="nav">
+        Menu
+      </button>
+
+      <nav class="nav" id="nav" aria-label="Primary">
+        <a href="/best-prefab-homes-canada/" class="is-active">Guides</a>
+        <a href="/how-we-test/">How we test</a>
+        <a href="/methodology/">Methodology</a>
+        <a href="/about/">About</a>
+        <a href="/disclosure/">Disclosure</a>
+      </nav>
+
+      <div class="header-cta">
+        <a class="btn btn-primary" href="/best-prefab-homes-canada/">See the Top 7</a>
+      </div>
+    </div>
+  </header>
+
+  <main id="main">
+    <!-- HERO -->
+    <section class="hero">
+      <div class="wrap hero-grid">
+        <div class="hero-card">
+          <span class="kicker">Canada-first • 2026</span>
+
+          <h1 class="hero-title">Prefab & Modular Home Guides for Canada</h1>
+
+          <p class="hero-sub">
+            Prefab listings can look “move-in ready” online, but many are closer to a structure or shell.
+            We publish practical guides that focus on what Canadian buyers actually need: documentation, approvals,
+            envelope performance, and realistic installed costs.
+          </p>
+
+          <div class="pillrow">
+            <span class="pill2">No hype</span>
+            <span class="pill2">What to verify</span>
+            <span class="pill2">Real cost drivers</span>
+            <span class="pill2">Canada-focused</span>
+          </div>
+
+          <div class="cta-row">
+            <a class="btn btn-primary" href="/best-prefab-homes-canada/">Read: Top 7 Amazon Prefab Homes</a>
+            <a class="btn btn-ghost" href="#how">How we test</a>
+          </div>
+
+          <p class="disclaimer hero-disclaimer">
+            Important: Rules vary by municipality. Always confirm zoning, occupancy, and required documentation before purchasing.
+          </p>
+        </div>
+
+        <aside class="hero-media" aria-label="Featured guide">
+          <div class="media-inner">
+            <div class="noteBox">
+              <h2 style="margin:0 0 10px;">Featured guide</h2>
+              <p class="small" style="margin:0 0 12px;opacity:.92;">
+                A realistic Canadian breakdown of expandable prefab homes on Amazon:
+                what’s included, what’s missing, and what the installed cost can look like.
+              </p>
+
+              <div class="cta-row" style="margin-top:10px;">
+                <a class="btn btn-primary" href="/best-prefab-homes-canada/">Open the guide</a>
+                <a class="btn btn-outline" href="#trust">Why trust this site</a>
+              </div>
+
+              <div class="sep" style="margin:16px 0;"></div>
+
+              <p class="small" style="margin:0;opacity:.9;">
+                New pages:
+                <a href="/disclosure/" style="text-decoration:underline;text-underline-offset:3px;">Disclosure</a>,
+                <a href="/privacy-policy/" style="text-decoration:underline;text-underline-offset:3px;">Privacy</a>,
+                <a href="/methodology/" style="text-decoration:underline;text-underline-offset:3px;">Methodology</a>
+              </p>
+            </div>
+          </div>
+        </aside>
+      </div>
+    </section>
+
+    <div class="wrap"><div class="hr-glow"></div></div>
+
+    <!-- TRUST BAR -->
+    <section id="trust" class="section anchor">
+      <div class="wrap">
+        <div class="trustbar">
+          <div>
+            <strong>What we optimize for:</strong>
+            <span class="muted">planning clarity, documentation, and Canada-realistic constraints.</span>
+          </div>
+          <div class="mini">
+            <span class="pill">Docs-first</span>
+            <span class="pill">Envelope focus</span>
+            <span class="pill">No fake “installed price”</span>
+            <span class="pill">Buyer checklists</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- PRIMARY GUIDE -->
+    <section class="section">
+      <div class="wrap">
+        <div class="section-head">
+          <div>
+            <h2>Latest guide</h2>
+            <p>Start here if you’re researching Amazon expandable prefab homes and want a realistic Canada-focused view.</p>
+          </div>
+        </div>
+
+        <div class="grid">
+          <article class="card grid-span-6 reveal">
+            <h3>7 Best Prefab Homes on Amazon Canada (2026)</h3>
+            <p>
+              A shortlist-style guide with practical review notes, “what’s missing” warnings, and real cost drivers like delivery,
+              foundations, permits, utilities, and winterization.
+            </p>
+            <div class="cta-row" style="margin-top:12px;">
+              <a class="btn btn-primary" href="/best-prefab-homes-canada/">Read the guide</a>
+              <a class="btn btn-ghost" href="/disclosure/">Affiliate disclosure</a>
+            </div>
+          </article>
+
+          <article class="card grid-span-6 reveal">
+            <h3>Site pages (trust + transparency)</h3>
+            <p>
+              If you want to understand how we evaluate listings and why we focus on documentation over marketing photos,
+              these pages explain it clearly.
+            </p>
+            <ul class="specs">
+              <li><a href="/how-we-test/" style="text-decoration:underline;text-underline-offset:3px;">How we test</a></li>
+              <li><a href="/methodology/" style="text-decoration:underline;text-underline-offset:3px;">Methodology</a></li>
+              <li><a href="/about/" style="text-decoration:underline;text-underline-offset:3px;">About</a></li>
+              <li><a href="/privacy-policy/" style="text-decoration:underline;text-underline-offset:3px;">Privacy policy</a></li>
+            </ul>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- HOW WE TEST (HOME PREVIEW) -->
+    <section id="how" class="section anchor">
+      <div class="wrap">
+        <div class="section-head">
+          <div>
+            <h2>How we test (quick preview)</h2>
+            <p>We’re not pretending to be a construction authority. We’re optimizing for buyer protection and planning clarity.</p>
+          </div>
+        </div>
+
+        <div class="grid">
+          <div class="card grid-span-6 reveal">
+            <h3>1) Documentation beats adjectives</h3>
+            <p>We look for written specs: insulation type/thickness, windows/doors, electrical approvals, roof structure, and what is truly included.</p>
+          </div>
+          <div class="card grid-span-6 reveal">
+            <h3>2) Canada reality checks</h3>
+            <p>Freeze-thaw, frost depth, snow loads, and permitting vary by municipality. We flag missing or unclear claims early.</p>
+          </div>
+          <div class="card grid-span-6 reveal">
+            <h3>3) Installed cost drivers</h3>
+            <p>Delivery/offload, foundation, permits, electrical, plumbing, and winterization are often bigger than expected. We explain the levers.</p>
+          </div>
+          <div class="card grid-span-6 reveal">
+            <h3>4) Buyer checklists</h3>
+            <p>Every guide is designed to help you ask the right questions before you spend money. If a seller can’t answer, treat it as a risk.</p>
+          </div>
+        </div>
+
+        <div class="cta-row" style="margin-top:14px;">
+          <a class="btn btn-primary" href="/how-we-test/">Read: How we test</a>
+          <a class="btn btn-ghost" href="/methodology/">See methodology</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- FAQ PREVIEW -->
+    <section class="section">
+      <div class="wrap">
+        <h2>FAQ (quick answers)</h2>
+        <div class="grid">
+          <div class="card grid-span-6 reveal">
+            <h3>Can I live full-time in an Amazon prefab home in Canada?</h3>
+            <p>Sometimes, but it depends on zoning and whether the unit can be made compliant. Treat most listings as shells unless proven otherwise.</p>
+          </div>
+          <div class="card grid-span-6 reveal">
+            <h3>What’s the biggest hidden cost?</h3>
+            <p>Site work and approvals: delivery/offload, foundation, permits, electrical, plumbing (well/septic), and winterization.</p>
+          </div>
+        </div>
+
+        <div class="noteBox noteBox--mt14">
+          <p class="small noteBoxText">
+            Want the full list? The guide includes a bigger FAQ section with practical “what to verify” bullets.
+          </p>
+        </div>
+
+        <div class="cta-row" style="margin-top:12px;">
+          <a class="btn btn-primary" href="/best-prefab-homes-canada/#faq">Open the full FAQ</a>
+        </div>
+      </div>
+    </section>
+
+    <div class="wrap"><div class="sep"></div></div>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="wrap footer-grid">
+      <div class="footerBrand">
+        <a class="footerBrandLink" href="/" aria-label="PrefabHomesCanada home">
+          <div class="footerBrandRow">
+            <img
+              class="footerIcon"
+              src="/assets/images/branding/phc-icon-1024.png"
+              width="28" height="28"
+              alt="PrefabHomesCanada icon"
+              loading="lazy" decoding="async">
+            <strong class="footerName">PrefabHomesCanada</strong>
+          </div>
+        </a>
+
+        <p class="small footerBlurb">
+          A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
+        </p>
+      </div>
+
+      <nav class="footerNav" aria-label="Footer">
+        <p class="footerTitle small">Site</p>
+        <ul class="footerLinksList">
+          <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
+          <li><a href="/how-we-test/">How we test</a></li>
+          <li><a href="/methodology/">Methodology</a></li>
+          <li><a href="/about/">About</a></li>
+          <li><a href="/disclosure/">Disclosure</a></li>
+          <li><a href="/privacy-policy/">Privacy policy</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="wrap footerBottom">
+      <div class="footerLegal small">
+        <span>© <span id="y"></span> PrefabHomesCanada</span>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/privacy-policy/">Privacy policy</a>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <span class="footerMuted">Listings can change. Verify documentation before purchase.</span>
+      </div>
+
+      <a class="footerTop small" href="#top" aria-label="Back to top">Back to top ↑</a>
+    </div>
+  </footer>
+
+  <script src="/assets/js/site.js" defer></script>
+</body>
+</html>
