--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="format-detection" content="telephone=no">
 
-  <title>PrefabHomesCanada (2026) | Practical Prefab & Modular Home Guides for Canada</title>
+  <title>Prefab Homes Canada (2026) | Expandable & Modular Home Cost Guides</title>
   <meta name="description" content="PrefabHomesCanada publishes practical, Canada-focused guides on expandable and modular prefab homes: what to verify, what’s missing, and realistic installed costs." />
   <link rel="canonical" href="https://prefabhomescanada.github.io/">
 
@@ -28,7 +28,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="PrefabHomesCanada">
-  <meta property="og:title" content="PrefabHomesCanada (2026) | Practical Prefab & Modular Home Guides for Canada">
+  <meta property="og:title" content="Prefab Homes Canada (2026) | Expandable & Modular Home Cost Guides">
   <meta property="og:description" content="Canada-focused prefab guidance: what to verify, what’s missing, and realistic installed costs. No hype." />
   <meta property="og:url" content="https://prefabhomescanada.github.io/">
   <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/prefabhomescanada-home-1200x630.webp">
@@ -37,7 +37,7 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="PrefabHomesCanada (2026) | Practical Prefab & Modular Home Guides for Canada">
+  <meta name="twitter:title" content="Prefab Homes Canada (2026) | Expandable & Modular Home Cost Guides">
   <meta name="twitter:description" content="Canada-focused prefab guidance: what to verify, what’s missing, and realistic installed costs. No hype." />
   <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/prefabhomescanada-home-1200x630.webp">
 
@@ -58,6 +58,32 @@
     "@id":"https://prefabhomescanada.github.io/#website",
     "name":"PrefabHomesCanada",
     "url":"https://prefabhomescanada.github.io/"
+  }
+  </script>
+
+  <!-- JSON-LD: FAQPage (Homepage) -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"FAQPage",
+    "mainEntity":[
+      {
+        "@type":"Question",
+        "name":"Can you live full-time in an Amazon prefab home in Canada?",
+        "acceptedAnswer":{
+          "@type":"Answer",
+          "text":"Sometimes, but it depends on zoning, building code compliance, and municipal approval. Many online prefab listings represent structures or shells rather than fully compliant dwellings."
+        }
+      },
+      {
+        "@type":"Question",
+        "name":"What is the real installed cost of a prefab home in Canada?",
+        "acceptedAnswer":{
+          "@type":"Answer",
+          "text":"Beyond the listing price, buyers must consider delivery, offload/crane requirements, foundation work, permits, utilities, septic or well systems, and winterization depending on region."
+        }
+      }
+    ]
   }
   </script>
 </head>
@@ -104,12 +130,12 @@
         <div class="hero-card">
           <span class="kicker">Canada-first • 2026</span>
 
-          <h1 class="hero-title">Prefab & Modular Home Guides for Canada</h1>
+          <h1 class="hero-title">Prefab &amp; Modular Home Guides for Canada</h1>
 
           <p class="hero-sub">
             Prefab listings can look “move-in ready” online, but many are closer to a structure or shell.
             We publish practical guides that focus on what Canadian buyers actually need: documentation, approvals,
-            envelope performance, and realistic installed costs.
+            envelope performance, and realistic <a href="/cost-of-prefab-home-canada/" style="text-decoration:underline;text-underline-offset:3px;">installed costs in Canada</a>.
           </p>
 
           <div class="pillrow">
@@ -177,6 +203,32 @@
       </div>
     </section>
 
+    <!-- SEO CONTEXT BLOCK (for indexing readiness) -->
+    <section class="section">
+      <div class="wrap">
+        <h2>Prefab Homes in Canada (What Buyers Actually Need to Know)</h2>
+
+        <p>
+          Prefab homes in Canada are often marketed as fast, affordable, and “move-in ready.”
+          In practice, many expandable prefab units and modular home listings sold online are closer to a structure or finished shell.
+          Before purchasing, Canadian buyers should verify zoning compatibility, occupancy rules, and whether the unit can be made compliant
+          with applicable building code requirements.
+        </p>
+
+        <p>
+          Installed cost is rarely the listing price alone. Delivery logistics, offload or crane requirements, site preparation, foundation work,
+          permits, utility hookups, and winterization can significantly change the real budget. Our guides focus on documentation clarity,
+          missing specifications, and Canada-realistic cost drivers rather than marketing photos.
+        </p>
+
+        <p>
+          Whether you are researching expandable container homes, modular prefab houses, or prefab cabins,
+          understanding approvals and total project scope is critical before committing to a purchase. Rules and requirements vary by municipality,
+          so we emphasize practical checklists and questions buyers can use to pressure-test a listing before spending money.
+        </p>
+      </div>
+    </section>
+
     <!-- PRIMARY GUIDE -->
     <section class="section">
       <div class="wrap">
@@ -211,6 +263,7 @@
               <li><a href="/methodology/" style="text-decoration:underline;text-underline-offset:3px;">Methodology</a></li>
               <li><a href="/about/" style="text-decoration:underline;text-underline-offset:3px;">About</a></li>
               <li><a href="/privacy-policy/" style="text-decoration:underline;text-underline-offset:3px;">Privacy policy</a></li>
+              <li><a href="/cost-of-prefab-home-canada/" style="text-decoration:underline;text-underline-offset:3px;">Cost of prefab homes (Canada)</a></li>
             </ul>
           </article>
         </div>
@@ -307,6 +360,7 @@
         <p class="footerTitle small">Site</p>
         <ul class="footerLinksList">
           <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
+          <li><a href="/cost-of-prefab-home-canada/">Cost of prefab homes</a></li>
           <li><a href="/how-we-test/">How we test</a></li>
           <li><a href="/methodology/">Methodology</a></li>
           <li><a href="/about/">About</a></li>
