--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta property="og:title" content="Prefab Homes Canada (2026) | Expandable & Modular Home Cost Guides">
   <meta property="og:description" content="Canada-focused prefab guidance: what to verify, what’s missing, and realistic installed costs. No hype." />
   <meta property="og:url" content="https://prefabhomescanada.github.io/">
-  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/prefabhomescanada-home-1200x630.webp">
+  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/modern-prefab-home-canada-winter-og-1200x630.webp">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
@@ -39,7 +39,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Prefab Homes Canada (2026) | Expandable & Modular Home Cost Guides">
   <meta name="twitter:description" content="Canada-focused prefab guidance: what to verify, what’s missing, and realistic installed costs. No hype." />
-  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/prefabhomescanada-home-1200x630.webp">
+  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/modern-prefab-home-canada-winter-og-1200x630.webp">
 
   <!-- JSON-LD: Organization + WebSite -->
   <script type="application/ld+json">
@@ -157,7 +157,26 @@
 
         <aside class="hero-media" aria-label="Featured guide">
           <div class="media-inner">
-            <div class="noteBox">
+            <figure style="margin:0;">
+              <img
+                src="/assets/images/hero/modern-prefab-home-canada-winter-1600x900.webp"
+                srcset="
+                  /assets/images/hero/modern-prefab-home-canada-winter-1600x900.webp 1600w,
+                  /assets/images/hero/modern-prefab-home-canada-winter-2400x1350.webp 2400w
+                "
+                sizes="100vw"
+                alt="Modern prefab home in a Canadian forest during winter at sunset with warm interior lights"
+                width="2400"
+                height="1350"
+                loading="eager"
+                decoding="async"
+                style="display:block;width:100%;height:auto;border-radius:inherit;">
+              <figcaption class="small muted" style="margin-top:10px;opacity:.9;">
+                Modern expandable prefab home in a Canadian forest setting during winter.
+              </figcaption>
+            </figure>
+
+            <div class="noteBox" style="margin-top:12px;">
               <h2 style="margin:0 0 10px;">Featured guide</h2>
               <p class="small" style="margin:0 0 12px;opacity:.92;">
                 A realistic Canadian breakdown of expandable prefab homes on Amazon:
