--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -273,11 +273,13 @@
 
   <main id="main">
     <!-- HERO -->
+<!-- HERO -->
 <section class="hero">
   <div class="wrap hero-grid">
     <div class="hero-card">
       <span class="kicker">2026 Canada guide</span>
       <h1 class="hero-title">7 Best Prefab Homes on Amazon Canada (2026 Guide)</h1>
+
       <p class="hero-sub">
         Expandable prefab homes on Amazon can look “all-in” at first glance, but most listings are closer to a structure or shell than a move-in-ready house.
         This guide is written for Canadian buyers who want a realistic view of what you get, what you still need, and what the installed cost can look like once you
@@ -302,26 +304,25 @@
       </p>
     </div>
 
-    <!-- HERO IMAGE + TOC -->
     <aside class="hero-media" aria-label="Page navigation">
       <div class="media-inner">
 
-        <!-- HERO IMAGE (no distortion) -->
-        <figure class="hero-figure" style="margin:0 0 14px;">
+        <!-- HERO IMAGE (match home styling) -->
+        <figure class="hero-figure">
           <picture>
             <source type="image/webp"
               srcset="/assets/images/hero/best-prefab-homes-canada-2026-hero-1600x900.webp 1600w,
                       /assets/images/hero/best-prefab-homes-canada-2026-hero-2400x1350.webp 2400w"
               sizes="(max-width: 979px) 100vw, 40vw">
             <img
+              class="hero-img"
               src="/assets/images/hero/best-prefab-homes-canada-2026-hero-1600x900.webp"
               width="1600"
               height="900"
-              alt="Modern expandable prefab container home concept for Canadian buyers (warm, realistic exterior)"
+              alt="Modern expandable prefab home in Canada (winter setting) – 2026 guide"
               loading="eager"
               decoding="async"
-              fetchpriority="high"
-              style="width:100%;height:auto;aspect-ratio:16/9;object-fit:cover;border-radius:18px;">
+              fetchpriority="high">
           </picture>
         </figure>
 
@@ -339,6 +340,7 @@
             <li><a href="#disclosure">Affiliate disclosure</a></li>
           </ul>
         </div>
+
       </div>
     </aside>
   </div>
