--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -314,23 +314,25 @@
       <div class="media-inner">
 
         <!-- HERO IMAGE -->
-        <figure class="hero-figure">
-          <picture>
-            <source type="image/webp"
-              srcset="/assets/images/hero/best-prefab-homes-canada-2026-hero-1600x900.webp 1600w,
-                      /assets/images/hero/best-prefab-homes-canada-2026-hero-2400x1350.webp 2400w"
-              sizes="(max-width: 979px) 100vw, 40vw">
-            <img
-              class="hero-img"
-              src="/assets/images/hero/best-prefab-homes-canada-2026-hero-1600x900.webp"
-              width="1600"
-              height="900"
-              alt="Modern expandable prefab home in Canada (winter setting) – 2026 guide"
-              loading="eager"
-              decoding="async"
-              fetchpriority="high">
-          </picture>
-        </figure>
+<figure class="hero-figure" style="margin:0;">
+  <picture>
+    <source
+      type="image/webp"
+      srcset="/assets/images/hero/best-prefab-homes-canada-2026-hero-1600x900.webp 1600w,
+              /assets/images/hero/best-prefab-homes-canada-2026-hero-2400x1350.webp 2400w"
+      sizes="(max-width: 979px) 100vw, 40vw">
+    <img
+      class="hero-img"
+      src="/assets/images/hero/best-prefab-homes-canada-2026-hero-1600x900.webp"
+      width="1600"
+      height="900"
+      alt="Modern expandable prefab home in Canada (winter setting) – 2026 guide"
+      loading="eager"
+      decoding="async"
+      fetchpriority="high"
+      style="display:block;width:100%;height:auto;border-radius:0;">
+  </picture>
+</figure>
 
         <!-- TOC (updated: no .specs here, so your .tocList CSS applies perfectly) -->
         <nav class="tocBox toc" aria-label="On this page">
