--- a/index.html
+++ b/index.html
@@ -376,17 +376,21 @@
       </div>
 
       <nav class="footerNav" aria-label="Footer">
-        <p class="footerTitle small">Site</p>
-        <ul class="footerLinksList">
-          <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
-          <li><a href="/cost-of-prefab-home-canada/">Cost of prefab homes</a></li>
-          <li><a href="/how-we-test/">How we test</a></li>
-          <li><a href="/methodology/">Methodology</a></li>
-          <li><a href="/about/">About</a></li>
-          <li><a href="/disclosure/">Disclosure</a></li>
-          <li><a href="/privacy-policy/">Privacy policy</a></li>
-        </ul>
-      </nav>
+  <p class="footerTitle small">Site</p>
+
+  <ul class="footerLinksGrid">
+    <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
+    <li><a href="/cost-of-prefab-homes-canada/">Cost of prefab homes</a></li>
+
+    <li><a href="/how-we-test/">How we test</a></li>
+    <li><a href="/methodology/">Methodology</a></li>
+
+    <li><a href="/about/">About</a></li>
+    <li><a href="/disclosure/">Disclosure</a></li>
+
+    <li><a href="/privacy-policy/">Privacy policy</a></li>
+  </ul>
+</nav>
     </div>
 
     <div class="wrap footerBottom">
