--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -1392,47 +1392,56 @@
   </main>
 
   <footer class="site-footer" role="contentinfo">
-    <div class="wrap footer-grid">
-      <div class="footerBrand">
-        <a class="footerBrandLink" href="/" aria-label="PrefabHomesCanada home">
-          <div class="footerBrandRow">
-            <img
-              class="footerIcon"
-              src="/assets/images/branding/phc-icon-1024.png"
-              width="28" height="28"
-              alt="PrefabHomesCanada icon"
-              loading="lazy" decoding="async">
-            <strong class="footerName">PrefabHomesCanada</strong>
-          </div>
-        </a>
+  <div class="wrap footer-grid">
+    <div class="footerBrand">
+      <a class="footerBrandLink" href="/" aria-label="PrefabHomesCanada home">
+        <div class="footerBrandRow">
+          <img
+            class="footerIcon"
+            src="/assets/images/branding/phc-icon-1024.png"
+            width="28" height="28"
+            alt="PrefabHomesCanada icon"
+            loading="lazy" decoding="async">
+          <strong class="footerName">PrefabHomesCanada</strong>
+        </div>
+      </a>
 
-        <p class="small footerBlurb">
-          A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
-        </p>
-      </div>
-
-      <nav class="footerNav" aria-label="Footer">
-        <p class="footerTitle small">On this page</p>
-        <ul class="footerLinksList">
-          <li><a href="#disclosure">Disclosure</a></li>
-          <li><a href="#faq">FAQ</a></li>
-          <li><a href="#real-costs">Real costs</a></li>
-        </ul>
-      </nav>
+      <p class="small footerBlurb">
+        A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
+      </p>
     </div>
 
-    <div class="wrap footerBottom">
-      <div class="footerLegal small">
-        <span>© <span id="y"></span> PrefabHomesCanada</span>
-        <span class="footerDot" aria-hidden="true">•</span>
-        <a href="/privacy-policy/">Privacy policy</a>
-        <span class="footerDot" aria-hidden="true">•</span>
-        <span class="footerMuted">Prices/availability can change. Verify listing details before purchase.</span>
-      </div>
+    <nav class="footerNav" aria-label="Footer">
+      <p class="footerTitle small">Site</p>
 
-      <a class="footerTop small" href="#top" aria-label="Back to top">Back to top ↑</a>
+      <ul class="footerLinksGrid">
+        <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
+        <li><a href="/cost-of-prefab-home-canada/">Cost of prefab homes</a></li>
+
+        <li><a href="/how-we-test/">How we test</a></li>
+        <li><a href="/methodology/">Methodology</a></li>
+
+        <li><a href="/about/">About</a></li>
+        <li><a href="/disclosure/">Disclosure</a></li>
+
+        <li><a href="/privacy-policy/">Privacy policy</a></li>
+        <li><a href="/contact/">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <div class="wrap footerBottom">
+    <div class="footerLegal small">
+      <span>© <span id="y"></span> PrefabHomesCanada</span>
+      <span class="footerDot" aria-hidden="true">•</span>
+      <a href="/privacy-policy/">Privacy policy</a>
+      <span class="footerDot" aria-hidden="true">•</span>
+      <span class="footerMuted">Listings can change. Verify documentation before purchase.</span>
     </div>
-  </footer>
+
+    <a class="footerTop small" href="#top" aria-label="Back to top">Back to top ↑</a>
+  </div>
+</footer>
 
   <script src="/assets/js/site.js" defer></script>
 </body>
